--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>I'm Bharath</h1>
         <h2>a programmer.</h2>
         
-        <img class="bottom-cloud" src="CSS - My site Images/cloud.png" alt="cloud img">
+        <img class="bottom-cloud" src="CSS - My Site Images/cloud.png" alt="cloud img">
         <img src="CSS - My Site Images/mountain.png" alt="">
     </div>
     <div class="middle-container">
