--- a/mobile.html
+++ b/mobile.html
@@ -26,7 +26,7 @@
     </body>
     <style>
         .divi{
-            background-image: url("CSS - My site Images/background.png");        
+            background-image: url("CSS - My Site Images/background.png");        
             width: 100%;
             height: 100vh;
             background-size: cover;
